[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "presentations_scraper"
author = "Yazeed Almuqwishi"
author-email = "yazeed.almuqwishi@gmail.com"
home-page = "https://github.com/yazeed44/presentations_scraper"
classifiers = [ "License :: OSI Approved :: MIT License",]

