[metadata]
name = pptxer
version = attr: pptxer.__init__.__version__
author = Yazeed Almuqwishi
author_email = yazeed.almuqwishi@gmail.com
description =  A fast high-level presentations scraper for Python and command Line
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yazeed44/pptxer
project_urls =
    Bug Tracker = https://github.com/yazeed44/pptxer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    fake-headers
    googlesearch-python
    python-pptx
    requests
    click
    click-logging

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pptxer = pptxer.cli:main